updates after winter season: some fixes to the code; update of cloudfunction to node8; workbench project config

--- a/SoilBuddy/firmware/.vscode/settings.json
+++ b/SoilBuddy/firmware/.vscode/settings.json
@@ -1,1 +1,5 @@
-{}
+{
+    "particle.targetDevice": "SoilBuddy",
+    "particle.firmwareVersion": "1.2.0-beta.1",
+    "particle.targetPlatform": "photon"
+}
